feat: lots of features

--- a/src/Cream/Dockerfile
+++ b/src/Cream/Dockerfile
@@ -1,4 +1,4 @@
-﻿FROM mcr.microsoft.com/dotnet/sdk:7.0 as build-env
+﻿FROM mcr.microsoft.com/dotnet/sdk as build-env
 WORKDIR /app
 
 # Copy files
@@ -11,7 +11,7 @@ RUN dotnet restore
 RUN dotnet publish -c Release -o out
 
 # Build runtime image
-FROM mcr.microsoft.com/dotnet/aspnet:7.0
+FROM mcr.microsoft.com/dotnet/aspnet:7.0-bookworm-slim-arm64v8
 WORKDIR /app
 COPY --from=build-env /app/out .
 ENTRYPOINT ["dotnet", "Cream.dll"]
