--- a/src/Cream/appsettings.json
+++ b/src/Cream/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "Token": "***",
-  "LavalinkHost": "***",
-  "LavalinkPassword": "***"
+  "LavalinkHost": "127.0.0.1",
+  "LavalinkPassword": "youshallnotpass",
+  "MessagePrefix": "!"
 }
