--- a/src/Cream/Cream.csproj
+++ b/src/Cream/Cream.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Serilog.Extensions.Hosting" Version="7.0.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="5.2.3" />
     <PackageReference Include="Victoria" Version="6.0.1026" />
   </ItemGroup>
 
