--- a/src/Cream/appsettings.json
+++ b/src/Cream/appsettings.json
@@ -1,6 +1,10 @@
 ﻿{
-  "Token": "***",
-  "LavalinkHost": "127.0.0.1",
-  "LavalinkPassword": "youshallnotpass",
-  "MessagePrefix": "!"
+  "Discord": {
+    "Prefix": "!",
+    "Token": "***"
+  },
+  "Lavalink": {
+    "Host": "http://127.0.0.1:2333",
+    "Password": "youshallnotpass"
+  }
 }
